Complete implementation of the enums