@@ -41,12 +41,12 @@ public class SessionManagerTest {
         }
 
         @Override
-        public List<Exercise> filterByEquipment(String equipment) {
+        public List<Exercise> filterByEquipment(EquipmentType equipment) {
             return List.of();
         }
 
         @Override
-        public List<Exercise> filterByMuscleGroup(String muscleGroup) {
+        public List<Exercise> filterByMuscleGroup(MuscleGroup muscleGroup) {
             return List.of();
         }
 
@@ -65,8 +65,8 @@ public class SessionManagerTest {
 
     @Test
     public void testNextMovesToNextExercise() {
-        Exercise e1 = new Exercise("e1", "First", Arrays.asList(MuscleGroup.CHEST), Arrays.asList(EquipmentType.BODYWEIGHT), "", 1, "placeholder");
-        Exercise e2 = new Exercise("e2", "Second", Arrays.asList(MuscleGroup.CHEST), Arrays.asList(EquipmentType.BODYWEIGHT), "", 1, "placeholder");
+        Exercise e1 = new Exercise("e1", "First", List.of(MuscleGroup.CHEST), List.of(EquipmentType.BODYWEIGHT), "", 1, List.of("placeholder"));
+        Exercise e2 = new Exercise("e2", "Second", List.of(MuscleGroup.CHEST), List.of(EquipmentType.BODYWEIGHT), "", 1, List.of("placeholder"));
         FakeExerciseRepository repo = new FakeExerciseRepository(List.of(e1, e2));
 
         Workout workout = new Workout("w1", "Test Workout", 1, List.of("e1", "e2"), List.of(0, 0), List.of(0, 0));
@@ -78,7 +78,7 @@ public class SessionManagerTest {
 
     @Test(expected = SessionCompletedException.class)
     public void getCurrentExerciseThrowsWhenSessionFinished() {
-        Exercise e1 = new Exercise("e1", "Only", Arrays.asList(MuscleGroup.CHEST), Arrays.asList(EquipmentType.BODYWEIGHT), "", 1, "placeholder");
+        Exercise e1 = new Exercise("e1", "Only", List.of(MuscleGroup.CHEST), List.of(EquipmentType.BODYWEIGHT), "", 1, List.of("placeholder"));
         FakeExerciseRepository repo = new FakeExerciseRepository(List.of(e1));
         Workout workout = new Workout("w1", "Test", 1, List.of("e1"), List.of(10), List.of(5));
         SessionManager manager = new SessionManager(workout, repo);
@@ -98,7 +98,7 @@ public class SessionManagerTest {
 
     @Test(expected = IllegalArgumentException.class)
     public void constructorRejectsNullWorkout() {
-        Exercise e1 = new Exercise("e1", "Only", Arrays.asList(MuscleGroup.CHEST), Arrays.asList(EquipmentType.BODYWEIGHT), "", 1, "placeholder");
+        Exercise e1 = new Exercise("e1", "Only", List.of(MuscleGroup.CHEST), List.of(EquipmentType.BODYWEIGHT), "", 1, List.of("placeholder"));
         FakeExerciseRepository repo = new FakeExerciseRepository(List.of(e1));
         new SessionManager(null, repo);
     }
@@ -111,7 +111,7 @@ public class SessionManagerTest {
 
     @Test
     public void nextDoesNotAdvancePastFinished() {
-        Exercise e1 = new Exercise("e1", "First", Arrays.asList(MuscleGroup.CHEST), Arrays.asList(EquipmentType.BODYWEIGHT), "", 1, "placeholder");
+        Exercise e1 = new Exercise("e1", "First", List.of(MuscleGroup.CHEST), List.of(EquipmentType.BODYWEIGHT), "", 1, List.of("placeholder"));
         FakeExerciseRepository repo = new FakeExerciseRepository(List.of(e1));
         Workout workout = new Workout("w1", "Test", 1, List.of("e1"), List.of(10), List.of(5));
 
